--- a/StoryFort/Components/_Imports.razor
+++ b/StoryFort/Components/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using StoryFort
 @using StoryFort.Components
+@using StoryFort.Components.Reader
 @using StoryFort.Components.Layout
 @using StoryFort.Services
 @using StoryFort.Models
